set ga tracking id

--- a/gtag-js.html
+++ b/gtag-js.html
@@ -1,5 +1,20 @@
-<html lang="ja"><head>
+<html lang="ja">
+<head>
   <title>gtag | TatsuyaYamamoto/study-ga-cookie</title>
+
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RX29KP062F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-RX29KP062F');
+  </script>
 </head>
 <body>
 gtag.js
