--- a/gtag-js.html
+++ b/gtag-js.html
@@ -4,19 +4,38 @@
 
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-RX29KP062F"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
-    gtag('js', new Date());
-
-    gtag('config', 'G-RX29KP062F');
-  </script>
 </head>
 <body>
 gtag.js
+
+<h2>logs</h2>
+<ul id="logs">
+
+</ul>
+
+<script>
+  var logsEl = document.getElementById("logs");
+  const writeLog = (text) => {
+    var logEl = document.createElement("li");
+    logEl.innerText = text;
+    logsEl.appendChild(logEl);
+  }
+
+  writeLog(document.cookie);
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
+  gtag('js', new Date(), () => {
+    writeLog("gtag('js') " + document.cookie);
+  });
+
+  gtag('config', 'G-RX29KP062F', () => {
+    writeLog("gtag('config') " + document.cookie);
+  });
+
+</script>
 </body>
 </html>
