--- a/gtag-js.html
+++ b/gtag-js.html
@@ -26,7 +26,7 @@ gtag.js
 
   function gtag() {
     dataLayer.push(arguments);
-    writeLog(arguments + " " + document.cookie);
+    writeLog("arguments: " + JSON.stringify(arguments) + ", cookie: " + document.cookie);
   }
 
   gtag('js', new Date());
