fix set log list el

--- a/gtag-js.html
+++ b/gtag-js.html
@@ -31,6 +31,8 @@
     logEl.innerText = text;
     logListEl.appendChild(logEl);
   }
+  document.body.appendChild(logListEl);
+
   document.getElementById("sendEvent").addEventListener("click", () => {
     gtag('event', 'click', {
       'event_category': 'button',
